--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tiptap/extension-color": "^2.7.2",
+    "@tiptap/pm": "^2.7.2",
+    "@tiptap/react": "^2.7.2",
+    "@tiptap/starter-kit": "^2.7.2",
+    "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-quill": "^2.0.0",
+    "react-quill-new": "^3.3.2",
     "react-router-dom": "^6.26.1",
-    "react-router-hash-link": "^2.4.3"
+    "react-router-hash-link": "^2.4.3",
+    "slate": "^0.103.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -26,6 +35,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "sass-embedded": "^1.79.3",
     "vite": "^5.4.1"
   }
 }
