--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -9,11 +9,11 @@
     "routes": [
         {
             "src": "/api/(.*)",
-            "dest": "/index.js"
+            "dest": "./routes/index.js"
         },
         {
             "src": "/(.*)",
-            "dest": "/index.js"
+            "dest": "./routes/index.js"
         }
     ]
 }
