--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,11 +2,15 @@
     "version": 2,
     "builds": [
         {
-            "src": "./server.js",
+            "src": "app.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
+        {
+            "src": "/api/(.*)",
+            "dest": "/app.js"
+        },
         {
             "src": "/(.*)",
             "dest": "/"
