--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -8,12 +8,8 @@
     ],
     "routes": [
         {
-            "src": "/api/(.*)",
-            "dest": "/app.js"
-        },
-        {
             "src": "/(.*)",
-            "dest": "/"
+            "dest": "./routes/index.js"
         }
     ]
 }
