--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -8,8 +8,8 @@
     ],
     "routes": [
         {
-            "src": "/(.*)",
-            "dest": "./routes/index.js"
+            "source": "/(.*)",
+            "destination": "/"
         }
     ]
 }
