--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,15 +1,9 @@
 {
     "version": 2,
-    "builds": [
-        {
-            "src": "app.js",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
+    "rewrites": [
         {
             "source": "/(.*)",
-            "destination": "/"
+            "destination": "/api"
         }
     ]
 }
