--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
         {
-            "src": "routes/**/*.js",
+            "src": "./routes/index.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/routes/$1"
+            "dest": "/"
         }
     ]
 }
