--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,14 +2,18 @@
     "version": 2,
     "builds": [
         {
-            "src": "app.js",
+            "src": "./routes/index.js",
+            "use": "@vercel/node"
+        },
+        {
+            "src": "./routes/users.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/"
+            "dest": "/$1"
         }
     ]
 }
