--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "draft-js-export-html": "^1.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
     "react-quill-new": "^3.3.2",
